kubernetes/apps/infrastructure/mimir/components/ingress/ingress-dummy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-dummy
  namespace: monitoring
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mimir-dummy.example.com
      secretName: mimir-dummy-tls
  rules:
    - host: mimir-dummy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
