kubernetes/apps/infrastructure/mimir/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod-aritrosinha"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mimir.ruth.aritrosinha.dpdns.org
      secretName: mimir-tls
  rules:
    - host: mimir.ruth.aritrosinha.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
